--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css"
     />
-    <title>Vite + React</title>
+    <title>Movies</title>
   </head>
   <body>
     <div id="root"></div>
